--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,17 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean package
+    - name: Create CBOM
+      uses: PQCA/cbomkit-action@v2.1.1
+      id: cbom
+      # Persist CBOM after a job has completed and share
+      # that CBOM with another job in the same workflow.
+    - name: Commit changes to new branch
+      uses: actions/upload-artifact@v4
+      with:
+        name: "CBOM"
+        path: ${{ steps.cbom.outputs.pattern }}
+        if-no-files-found: warn
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@v5
