--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
     - name: Create CBOM
-      uses: PQCA/cbomkit-action@v2.1.1
+      uses: cbomkit/cbomkit-action@v2.1.1
       id: cbom
       # Persist CBOM after a job has completed and share
       # that CBOM with another job in the same workflow.
